# PoiGuides

./: .gitignore  AUTHORS  README  compile  configure  configure.ac  poiguides.bb  poiguides_git.bb
data/: Makefile.am  Makefile.in  poi_attributes  poi_groups  poiguides.desktop
libeflvala/vapi/: edje.vapi
src/: Makefile.am  Makefile.in  config.vala  controller.vala  dbus_interfaces.vala  helper_opening_hours.vala  main.vala  model_bounding_box.vala  model_gps.vala  model_pois.vala  model_pois_attr.vala  view_main.vala  view_page_about.vala  view_page_categories.vala  view_page_config.vala  view_page_download.vala  view_page_downloading.vala  view_page_main.vala  view_page_new_edit_poi.vala  view_page_poi.vala
src/libeflvala/vapi/: ecore.vapi  eina.vapi  elm.vapi  evas.vapi
